--- a/public/stylesheets/less/rp-animations.less
+++ b/public/stylesheets/less/rp-animations.less
@@ -375,10 +375,10 @@ sidenav
     animation: sidenav_enter 1300ms @rp-deceleration-curve !important;
 }
 
-.rp-animation-sidenav {
-    transition: all 5s !important;
-
-}
+// .rp-animation-sidenav {
+//     transition: all 5s !important;
+//
+// }
 
 
 
